--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/comment?serverTimezone=Asia/Seoul
     username: root
-    password: 1234
+    password: "[dhqclwoa12]"
   jpa:
     hibernate:
       ddl-auto: update
