--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   kafka:
-    bootstrap-servers: 34.42.237.145:9093
+    bootstrap-servers: 34.121.154.179:9093
     consumer:
-      auto-offset-reset: earliest
+      auto-offset-reset: latest
       group-id: album
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
@@ -13,7 +13,7 @@ spring:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
   datasource:
-    url: jdbc:mysql://34.42.237.145:3306/comment?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://34.68.123.82:3306/comment?serverTimezone=Asia/Seoul
     username: root
     password: 1234
   jpa:
